# setup-gui

./: .gitignore  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  diagram.drawio  main.cpp  metadata.toml  protocols.toml
includes/: camera-control.cpp  camera-control.h  cameras.cpp  cameras.h  compress_videos.ixx  control.cpp  control.h  data_view.cpp  data_view.h  directoryNode.cpp  directoryNode.h  ephys-control.ixx  ephys.cpp  ephys.h  framerateManager.h  game.cpp  game.h  game.ixx  general_view.cpp  general_view.h  gui.cpp  gui.h  metadata.cpp  metadata.h  path-manager.cpp  path-manager.h  protocols.cpp  protocols.h  session_control.ixx  status.cpp  status.h  timer.h  timer.ixx  zaber.cpp  zaber.h
windows/: MyApp.rc
